# plaque

./: .gitignore  CLAUDE.dev.md  CLAUDE.md  DEVLOG.md  IPYTHON_BACKEND.md  README.md  pyproject.toml
.github/workflows/: uv.yml
examples/: async_example.py  data_exploration.py  example.py  getting-started.html  getting-started.py  live.py  mcp_test.py  mcp_test_client.py  mcp_usage.md  simple.py  simple_interactive.py
src/plaque/: __init__.py  api_formatter.py  ast_parser.py  cell.py  cli.py  dependency_analyzer.py  display.py  environment.py  formatter.py  ipython_environment.py  ipython_kernel.py  parser.py  processor.py  server.py  watcher.py
src/plaque/mcp/: __init__.py  analyzers.py  prompts.py  resources.py  server.py
src/plaque/templates/: notebook.html
tests/: test_api_formatter.py  test_api_integration.py  test_ast_parser.py  test_dependency_analyzer.py  test_display.py  test_environment.py  test_formatter.py  test_fstring_execution.py  test_ipython_environment.py  test_mcp_server.py  test_parser.py  test_processor.py  test_server_api.py  test_single_quote_strings.py
tests/test_fixtures/: mixed_cells.py  simple_cells.py
